--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@svgr/webpack": "^6.5.1",
+    "@vue/eslint-config-prettier": "^7.0.0",
     "core-js": "^3.8.3",
+    "prettier": "^2.8.2",
+    "v-calendar": "^2.4.1",
+    "v-tooltip": "^2.1.3",
     "vue": "^2.6.14",
+    "vue-axios": "^3.5.2",
+    "vue-draggable-resizable": "^2.3.0",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3"
   },
   "devDependencies": {
