--- a/package.json
+++ b/package.json
@@ -8,17 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@svgr/webpack": "^6.5.1",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "core-js": "^3.8.3",
-    "prettier": "^2.8.2",
     "v-calendar": "^2.4.1",
     "v-tooltip": "^2.1.3",
     "vue": "^2.6.14",
     "vue-axios": "^3.5.2",
     "vue-draggable-resizable": "^2.3.0",
     "vue-moment": "^4.1.0",
-    "vue-router": "^3"
+    "vue-router": "^3",
+    "vue-svg-loader": "^0.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -28,7 +25,9 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "babel-loader": "^9.1.2",
     "babel-polyfill": "^6.26.0",
+    "core-js": "^3.8.3",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "postcss-css-variables": "^0.18.0",
@@ -37,6 +36,7 @@
     "postcss-import": "^15.0.1",
     "postcss-nested": "^6.0.0",
     "postcss-preset-env": "^7.8.3",
+    "prettier": "^2.8.2",
     "sass": "^1.56.1",
     "sass-loader": "^13.2.0",
     "vue-template-compiler": "^2.6.14"
@@ -58,11 +58,10 @@
     }
   },
   "browserslist": [
-    "> 0.2%",
     "last 1 chrome version",
     "last 1 firefox version",
     "last 1 safari version",
     "last 2 ie version",
-    "IE 10"
+    "IE 11"
   ]
 }
