--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "vue-ie",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.19.0",
+    "yarn": "1.22.19"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
