--- a/package.json
+++ b/package.json
@@ -62,10 +62,11 @@
     }
   },
   "browserslist": [
+    "> 0.2%",
+    "IE 11",
     "last 1 chrome version",
     "last 1 firefox version",
     "last 1 safari version",
-    "last 2 ie version",
-    "IE 11"
+    "last 1 ie version"
   ]
 }
