--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "16.19.0",
-    "yarn": "1.22.19"
+    "node": ">=16.19.0",
+    "yarn": ">=1.22.19"
   },
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -12,11 +12,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.7.1",
     "v-calendar": "^2.4.1",
     "v-tooltip": "^2.1.3",
     "vue": "^2.6.14",
     "vue-axios": "^3.5.2",
+    "vue-custom-scrollbar": "^1.4.4",
     "vue-draggable-resizable": "^2.3.0",
+    "vue-lottie": "^0.2.1",
     "vue-moment": "^4.1.0",
     "vue-router": "^3",
     "vue-svg-loader": "^0.16.0"
@@ -43,6 +46,7 @@
     "prettier": "^2.8.2",
     "sass": "^1.56.1",
     "sass-loader": "^13.2.0",
+    "vue-inline-svg": "^2.1.1",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
