--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "yarn": ">=1.22.19"
   },
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "local": "cross-env NODE_ENV=local vue-cli-service serve",
+    "dev": "cross-env NODE_ENV=development vue-cli-service serve",
+    "prod": "cross-env NODE_ENV=production vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -16,12 +18,13 @@
     "v-calendar": "^2.4.1",
     "v-tooltip": "^2.1.3",
     "vue": "^2.6.14",
+    "vuex": "^3.6.2",
     "vue-axios": "^3.5.2",
     "vue-custom-scrollbar": "^1.4.4",
     "vue-draggable-resizable": "^2.3.0",
     "vue-lottie": "^0.2.1",
     "vue-moment": "^4.1.0",
-    "vue-router": "^3",
+    "vue-router": "^3.5.4",
     "vue-svg-loader": "^0.16.0"
   },
   "devDependencies": {
@@ -35,6 +38,7 @@
     "babel-loader": "^9.1.2",
     "babel-polyfill": "^6.26.0",
     "core-js": "^3.8.3",
+    "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "postcss-css-variables": "^0.18.0",
@@ -66,11 +70,11 @@
     }
   },
   "browserslist": [
-    "> 0.2%",
-    "IE 11",
-    "last 1 chrome version",
-    "last 1 firefox version",
-    "last 1 safari version",
-    "last 1 ie version"
+    "> 0.25%",
+    "IE 10",
+    "last 2 chrome version",
+    "last 2 firefox version",
+    "last 2 safari version",
+    "last 2 ie version"
   ]
 }
