--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "local": "cross-env NODE_ENV=local vue-cli-service serve",
     "dev": "cross-env NODE_ENV=development vue-cli-service serve",
     "prod": "cross-env NODE_ENV=production vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "cross-env NODE_ENV=development vue-cli-service build",
+    "build:prod": "cross-env NODE_ENV=production vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
