--- a/package.json
+++ b/package.json
@@ -15,18 +15,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@vue/composition-api": "^1.7.1",
+    "axios": "^1.2.2",
     "v-calendar": "^2.4.1",
     "v-tooltip": "^2.1.3",
     "vue": "^2.6.14",
-    "vuex": "^3.6.2",
-    "vue-axios": "^3.5.2",
     "vue-custom-scrollbar": "^1.4.4",
     "vue-draggable-resizable": "^2.3.0",
     "vue-lottie": "^0.2.1",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.5.4",
-    "vue-svg-loader": "^0.16.0"
+    "vue-svg-loader": "^0.16.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -36,6 +35,7 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/composition-api": "^1.7.1",
     "babel-loader": "^9.1.2",
     "babel-polyfill": "^6.26.0",
     "core-js": "^3.8.3",
@@ -51,7 +51,6 @@
     "prettier": "^2.8.2",
     "sass": "^1.56.1",
     "sass-loader": "^13.2.0",
-    "vue-inline-svg": "^2.1.1",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
@@ -68,10 +67,15 @@
     },
     "rules": {
       "vue/multi-word-component-names": 0
-    }
+    },
+    "plugins": [
+      "html",
+      "standard",
+      "vue"
+    ]
   },
   "browserslist": [
-    "> 0.25%",
+    "> 0.2%",
     "IE 10",
     "last 2 chrome version",
     "last 2 firefox version",
