--- a/package.json
+++ b/package.json
@@ -17,16 +17,16 @@
   "dependencies": {
     "axios": "^1.2.2",
     "swiper": "4.4.1",
-    "v-calendar": "^2.4.1",
     "v-tooltip": "^2.1.3",
-    "vue": "^2.6.14",
     "vue-awesome-swiper": "3",
     "vue-custom-scrollbar": "^1.4.4",
     "vue-draggable-resizable": "^2.3.0",
     "vue-lottie": "^0.2.1",
     "vue-moment": "^4.1.0",
+    "vue2-datepicker": "^3.11.1",
     "vue-router": "^3.5.4",
     "vue-svg-loader": "^0.16.0",
+    "vue": "^2.6.14",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
