--- a/package.json
+++ b/package.json
@@ -16,17 +16,20 @@
   },
   "dependencies": {
     "axios": "^1.2.2",
+    "core-js": "^3.8.3",
+    "es6-promise": "^4.2.8",
+    "jquery": "3.6.3",
+    "lodash": "4.17.21",
     "swiper": "4.4.1",
-    "v-tooltip": "^2.1.3",
+    "vue": "^2.6.14",
     "vue-awesome-swiper": "3",
     "vue-custom-scrollbar": "^1.4.4",
     "vue-draggable-resizable": "^2.3.0",
     "vue-lottie": "^0.2.1",
     "vue-moment": "^4.1.0",
-    "vue2-datepicker": "^3.11.1",
     "vue-router": "^3.5.4",
     "vue-svg-loader": "^0.16.0",
-    "vue": "^2.6.14",
+    "vue2-datepicker": "^3.11.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
@@ -40,11 +43,11 @@
     "@vue/composition-api": "^1.7.1",
     "babel-loader": "^9.1.2",
     "babel-polyfill": "^6.26.0",
-    "core-js": "^3.8.3",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "postcss-cssnext": "^3.1.1",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-gap-properties": "^3.0.5",
     "postcss-import": "^15.0.1",
