--- a/package.json
+++ b/package.json
@@ -1,85 +1,86 @@
 {
-  "name": "vue-ie",
-  "version": "0.1.0",
-  "private": true,
-  "engines": {
-    "node": ">=16.19.0",
-    "yarn": ">=1.22.19"
-  },
-  "scripts": {
-    "local": "cross-env NODE_ENV=local vue-cli-service serve",
-    "dev": "cross-env NODE_ENV=development vue-cli-service serve",
-    "prod": "cross-env NODE_ENV=production vue-cli-service serve",
-    "build": "cross-env vue-cli-service build --mode development",
-    "build:prod": "cross-env vue-cli-service build --mode production",
-    "lint": "vue-cli-service lint"
-  },
-  "dependencies": {
-    "axios": "^1.2.2",
-    "core-js": "^3.8.3",
-    "es6-promise": "^4.2.8",
-    "jquery": "3.6.3",
-    "lodash": "4.17.21",
-    "swiper": "4.4.1",
-    "vue": "^2.6.14",
-    "vue-awesome-swiper": "3",
-    "vue-custom-scrollbar": "^1.4.4",
-    "vue-draggable-resizable": "^2.3.0",
-    "vue-lottie": "^0.2.1",
-    "vue-moment": "^4.1.0",
-    "vue-router": "^3.5.4",
-    "vue-svg-loader": "^0.16.0",
-    "vue2-datepicker": "^3.11.1",
-    "vuex": "^3.6.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.20.2",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "@vue/composition-api": "^1.7.1",
-    "babel-loader": "^9.1.2",
-    "babel-polyfill": "^6.26.0",
-    "cross-env": "^7.0.3",
-    "dotenv": "^16.0.3",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "postcss-cssnext": "^3.1.1",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-gap-properties": "^3.0.5",
-    "postcss-import": "^15.0.1",
-    "postcss-nested": "^6.0.0",
-    "postcss-preset-env": "^7.8.3",
-    "prettier": "^2.8.2",
-    "sass": "^1.56.1",
-    "sass-loader": "^13.2.0",
-    "vue-template-compiler": "^2.6.14"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    },
-    "rules": {
-      "vue/multi-word-component-names": 0
-    }
-  },
-  "browserslist": [
-    "> 0.2%",
-    "IE 10",
-    "last 2 chrome version",
-    "last 2 firefox version",
-    "last 2 safari version",
-    "last 2 ie version"
-  ]
+	"name": "vue-ie",
+	"version": "0.1.0",
+	"private": true,
+	"engines": {
+		"node": ">=16.19.0",
+		"yarn": ">=1.22.19"
+	},
+	"scripts": {
+		"local": "cross-env NODE_ENV=local vue-cli-service serve",
+		"dev": "cross-env NODE_ENV=development vue-cli-service serve",
+		"prod": "cross-env NODE_ENV=production vue-cli-service serve",
+		"build": "cross-env vue-cli-service build --mode development",
+		"build:prod": "cross-env vue-cli-service build --mode production",
+		"lint": "vue-cli-service lint",
+		"lint:fix": "eslint src/**/*.{js,vue} --fix"
+	},
+	"dependencies": {
+		"axios": "^1.2.2",
+		"core-js": "^3.8.3",
+		"es6-promise": "^4.2.8",
+		"jquery": "3.6.3",
+		"lodash": "4.17.21",
+		"swiper": "4.4.1",
+		"vue": "^2.6.14",
+		"vue-awesome-swiper": "3",
+		"vue-custom-scrollbar": "^1.4.4",
+		"vue-draggable-resizable": "^2.3.0",
+		"vue-lottie": "^0.2.1",
+		"vue-moment": "^4.1.0",
+		"vue-router": "^3.5.4",
+		"vue-svg-loader": "^0.16.0",
+		"vue2-datepicker": "^3.11.1",
+		"vuex": "^3.6.2"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.12.16",
+		"@babel/eslint-parser": "^7.12.16",
+		"@babel/polyfill": "^7.12.1",
+		"@babel/preset-env": "^7.20.2",
+		"@vue/cli-plugin-babel": "~5.0.0",
+		"@vue/cli-plugin-eslint": "~5.0.0",
+		"@vue/cli-service": "~5.0.0",
+		"@vue/composition-api": "^1.7.1",
+		"babel-loader": "^9.1.2",
+		"babel-polyfill": "^6.26.0",
+		"cross-env": "^7.0.3",
+		"dotenv": "^16.0.3",
+		"eslint": "^7.32.0",
+		"eslint-plugin-vue": "^8.0.3",
+		"postcss-cssnext": "^3.1.1",
+		"postcss-flexbugs-fixes": "^5.0.2",
+		"postcss-gap-properties": "^3.0.5",
+		"postcss-import": "^15.0.1",
+		"postcss-nested": "^6.0.0",
+		"postcss-preset-env": "^7.8.3",
+		"prettier": "^2.8.2",
+		"sass": "^1.56.1",
+		"sass-loader": "^13.2.0",
+		"vue-template-compiler": "^2.6.14"
+	},
+	"eslintConfig": {
+		"root": true,
+		"env": {
+			"node": true
+		},
+		"extends": [
+			"plugin:vue/essential",
+			"eslint:recommended"
+		],
+		"parserOptions": {
+			"parser": "@babel/eslint-parser"
+		},
+		"rules": {
+			"vue/multi-word-component-names": 0
+		}
+	},
+	"browserslist": [
+		"> 0.2%",
+		"IE 10",
+		"last 2 chrome version",
+		"last 2 firefox version",
+		"last 2 safari version",
+		"last 2 ie version"
+	]
 }
