--- a/.prettierrc
+++ b/.prettierrc
@@ -8,6 +8,7 @@
   "trailingComma": "es5",
   "printWidth": 80,
   "bracketSpacing": true,
+  "bracketSameLine": false,
   "arrowParens": "always",
   "vueIndentScriptAndStyle": true
 }
