update package scripts

--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
 		"local": "cross-env NODE_ENV=local vue-cli-service serve",
 		"dev": "cross-env NODE_ENV=development vue-cli-service serve",
 		"prod": "cross-env NODE_ENV=production vue-cli-service serve",
-		"build": "cross-env vue-cli-service build --mode development",
-		"build:prod": "cross-env vue-cli-service build --mode production",
+		"build": "cross-env vue-cli-service build",
 		"lint": "vue-cli-service lint",
 		"lint:fix": "eslint src/**/*.{js,vue} --fix"
 	},
