--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"engines": {
-		"node": ">=16.19.0",
-		"yarn": ">=1.22.19"
+		"node": ">=16.19.0"
 	},
 	"scripts": {
 		"local": "cross-env NODE_ENV=local vue-cli-service serve",
