--- a/.prettierrc
+++ b/.prettierrc
@@ -8,7 +8,8 @@
   "trailingComma": "es5",
   "printWidth": 80,
   "bracketSpacing": true,
-  "bracketSameLine": false,
+  "bracketSameLine": true,
+  "singleAttributePerLine": true,
   "arrowParens": "always",
   "vueIndentScriptAndStyle": true
 }
