--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"vue-custom-scrollbar": "^1.4.4",
 		"vue-draggable-resizable": "^2.3.0",
 		"vue-lottie": "^0.2.1",
+		"vue-meta": "^2.4.0",
 		"vue-moment": "^4.1.0",
 		"vue-router": "^3.5.4",
 		"vue-svg-loader": "^0.16.0",
