--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"jquery": "3.6.3",
 		"lodash": "4.17.21",
 		"swiper": "4.4.1",
-		"vue": "^2.6.14",
+		"vue": "2.6.14",
 		"vue-awesome-swiper": "3",
 		"vue-custom-scrollbar": "^1.4.4",
 		"vue-draggable-resizable": "^2.3.0",
@@ -59,7 +59,7 @@
 		"sass-loader": "^13.2.0",
 		"url-loader": "^4.1.1",
 		"vue-svg-inline-loader": "^2.1.5",
-		"vue-template-compiler": "^2.6.14"
+		"vue-template-compiler": "2.6.14"
 	},
 	"browserslist": [
 		"> 0.2%",
