vue-grid-responsive 플러그인 추가 및 테스트

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"vue-awesome-swiper": "3",
 		"vue-custom-scrollbar": "^1.4.4",
 		"vue-draggable-resizable": "^2.3.0",
+		"vue-grid-responsive": "^0.5.0",
 		"vue-lottie": "^0.2.1",
 		"vue-meta": "^2.4.0",
 		"vue-moment": "^4.1.0",
