--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"jquery": "3.6.3",
 		"lodash": "4.17.21",
 		"swiper": "4.4.1",
+		"v-tooltip": "^2.1.3",
 		"vue": "2.6.14",
 		"vue-awesome-swiper": "3",
 		"vue-custom-scrollbar": "^1.4.4",
