--- a/.prettierrc
+++ b/.prettierrc
@@ -4,11 +4,9 @@
   "singleQuote": false,
   "useTabs": true,
   "tabWidth": 2,
-  "indentStyle": "space",
   "trailingComma": "es5",
   "printWidth": 80,
   "bracketSpacing": true,
   "bracketSameLine": false,
-  "arrowParens": "always",
-  "vueIndentScriptAndStyle": true
+  "arrowParens": "always"
 }
