--- a/package.json
+++ b/package.json
@@ -43,19 +43,20 @@
 		"@vue/cli-plugin-eslint": "~5.0.0",
 		"@vue/cli-service": "~5.0.0",
 		"@vue/composition-api": "^1.7.1",
+		"@vue/runtime-dom": "^3.2.47",
 		"babel-loader": "^9.1.2",
 		"babel-polyfill": "^6.26.0",
 		"cross-env": "^7.0.3",
 		"dotenv": "^16.0.3",
 		"eslint": "^7.32.0",
-		"eslint-config-prettier": "^8.7.0",
 		"eslint-config-standard": "^14.1.0",
 		"eslint-plugin-import": "^2.18.2",
-		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-promise": "^4.2.1",
 		"eslint-plugin-standard": "^4.0.1",
 		"eslint-plugin-vue": "^8.0.3",
 		"file-loader": "^6.2.0",
+		"husky": "^8.0.3",
+		"lint-staged": "^13.1.2",
 		"postcss-cssnext": "^3.1.1",
 		"postcss-flexbugs-fixes": "^5.0.2",
 		"postcss-gap-properties": "^3.0.5",
