--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
 		"postcss-import": "^15.0.1",
 		"postcss-nested": "^6.0.0",
 		"postcss-preset-env": "^7.8.3",
-		"prettier": "^2.8.2",
+		"prettier": "^2.8.4",
 		"sass": "^1.56.1",
 		"sass-loader": "^13.2.0",
 		"url-loader": "^4.1.1",
@@ -82,7 +82,7 @@
 		}
 	},
 	"lint-staged": {
-		"*.{vue,js,jsx}": [
+		"src/*.{vue,js,jsx}": [
 			"eslint --fix",
 			"prettier --write"
 		]
