--- a/package.json
+++ b/package.json
@@ -49,8 +49,10 @@
 		"cross-env": "^7.0.3",
 		"dotenv": "^16.0.3",
 		"eslint": "^7.32.0",
+		"eslint-config-prettier": "^8.7.0",
 		"eslint-config-standard": "^14.1.0",
 		"eslint-plugin-import": "^2.18.2",
+		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-promise": "^4.2.1",
 		"eslint-plugin-standard": "^4.0.1",
 		"eslint-plugin-vue": "^8.0.3",
